# twitter_clone_backend

./: .env.dev  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
follow/: apps.py  factories.py  models.py  serializer.py  serializers.py  urls.py  views.py
follow/migrations/: 0001_initial.py
follow/tests/: test_follow.py
posts/: factories.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment_like.py
posts/tests/: test_comment.py  test_like.py  test_post.py
twitter_clone/: settings.py  urls.py
users/: factories.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups.py  0003_user_profile_picture_alter_user_groups_and_more.py  0004_user_biography.py
users/tests/: test_login.py  test_registration.py
